css/style.css
body{
    margin: 0;
    padding: 0;
    background: url(../imgs/background.jpg) no-repeat;
    background-size: cover;
}




/*------------------Box class styling----------------------*/
.box{
    width: 450px;
    background: rgba(39, 55, 81, 0.4);
    padding: 40px;
    text-align: center;
    margin: auto;
    margin-top: 5%;
    margin-bottom: 5%;
    color: white;
    font-family: 'Century-Gothic', sans-serif;
}

.box-img{
    border-radius: 50%;
    width: 200px;
    height: 200px;
}

.box h1{
    font-size: 40px;
    letter-spacing: 4px;
    font-weight: 100;
}

.box h5{
    font-size: 20px;
    letter-spacing: 3px;
    font-weight: 100;
}

.box p{
    text-align: justify;
}

ul{
    margin: 0;
    padding: 0;
}

.box li{
    display: inline-block;
    margin: 6px;
    list-style: none;
}

.box li a{
    color: white;
    text-decoration: none;
    font-size: 60px;
    transition: all ease-in-out 250ms;
}

.box li a:hover{
    color: #b9b9b9;
}


/*-----------Navigation bar styling-------------*/
.side{
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

.side a{
    background: rgba(71, 92, 127, 0.7);
    color: white;
    font-size: 22px;
    display: block;
    width: 120px;
    padding: 12px;
    text-decoration: none;
    margin: 8px;
    transition: 0.5s all;
}

.side a:hover{
    color: rgb(165, 199, 255);
}



/*---------- Calendar ----------------*/
.calendar{
    text-align: center;
    margin-top: 10%;
}

